Commit update Projects.html

--- a/Projects.html
+++ b/Projects.html
@@ -31,6 +31,9 @@
         <ul>
             <p class="art">Machine Learning Projects</p>
             <li class="list"><a href="predictionmodel_xgboost.jpg">Machine learning prediction model designed using python, scikit-learn, and xgboost library</a></li>
+            <p>Project Overview:</p>
+            <li>Developed a machine learning prediction model using Python, scikit-learn, and XGBoost libraries.</li>
+            <p>The model aimed to predict precipitation values (PRCP) based on weather data.</p>
         </ul>
         <ul>
             <p class="art" style="margin-top: -30px;">Excel and Power BI Projects for Data Analysis</p>
@@ -38,7 +41,7 @@
         </ul>
         <ul>
             <p class="art" style="margin-top: -30px;">HTML and CSS Projects</p>
-            <li class="list"><a href="html_css.jpg" target="_parent">Peroanl website designed using html and css</a></li>
+            <li class="list"><a href="html_css.jpg" target="_parent">Personal website designed using html and css</a></li>
         </ul>
     </article>
 </body>
