--- a/Projects.html
+++ b/Projects.html
@@ -31,10 +31,17 @@
         <ul>
             <p class="art">Machine Learning Projects</p>
             <li class="list"><a href="predictionmodel_xgboost.jpg">Machine learning prediction model designed using python, scikit-learn, and xgboost library</a></li>
-            <p>Project Overview:</p>
-            <li>Developed a machine learning prediction model using Python, scikit-learn, and XGBoost libraries.</li>
-            <p>The model aimed to predict precipitation values (PRCP) based on weather data.</p>
+            <p class=" art" style="margin-top: -30px;"><b>Project Overview:</b></p>
+            <li class="list">Developed a machine learning prediction model using Python, scikit-learn, and XGBoost libraries.</li>
+            <li class="list" style="margin-top: 0px;">The model aimed to predict precipitation values (PRCP) based on weather data.</li>
+            <p class=" art" style="margin-top: -30px;"><b>Skills Acquired:</b></p>
+            <li class="list">Data Preprocessing: Handled missing and erroneous data, converted categorical data to numerical codes, and inferred object types.</li>
+            <li class="list" style="margin-top: 0px;">Feature Engineering: Defined features and target variables, and split the dataset into training and testing sets.</li>
+            <li class="list" style="margin-top: 0px;">Model Evaluation: Evaluated the model's performance using Mean Squared Error (MSE), Root Mean Squared Error (RMSE), and Mean Absolute Error (MAE).</li>
+            <li class="list" style="margin-top: 0px;">Version Control: Utilized Git commands (git add, git commit, git push, git pull) to manage the repository and collaborated with others.</li>
+            <li class="list" style="margin-top: 0px;">GitHub Pages: Hosted and rendered HTML files to display the project as a website.</li>
         </ul>
+        
         <ul>
             <p class="art" style="margin-top: -30px;">Excel and Power BI Projects for Data Analysis</p>
             <li class="list"><a href="pbi_dashbaord.jpg" target="_parent">Power BI Dashboard Design</a></li>
