--- a/Research Work.html
+++ b/Research Work.html
@@ -17,7 +17,7 @@
         </div>
         <div>
            <ul  class="ul_1">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Education.html">Education</a></li>
             <li><a href="Projects.html">Projects</a></li>
             <li><a href="Research Work.html">Research Work</a></li>
