--- a/Education.html
+++ b/Education.html
@@ -9,7 +9,7 @@
 <body>
     <div class="heading">
         <h1 class="heading_1" style="font-size: xx-large;"> Francis Owoicho Idoko</h1> 
-        <h4 class="heading_2"> Business Process Transformation | Data Analyst | Python, SQL, R, Power BI, Excel</h4>
+        <h4 class="heading_2">AI and Machine Learning | Python, PyTorch, TensorFlow, Scikit-Learn</h4>
     </div>
    <section class="section">
         <div>
