Update image.jpg index.html Projects.html

--- a/Projects.html
+++ b/Projects.html
@@ -27,7 +27,7 @@
     </section>
      
     <article>  
-        <h2 class="art" style="margin-top: 0px;text-decoration-line: underline;">Summary of Projects</h2>
+        <h2 class="art" style="margin-top: 0px;text-decoration-line: underline;">Summary of Projects and Personal Learnings</h2>
         <ul>
             <p class="art">Machine Learning Projects</p>
             <li class="list"><a href="predictionmodel_xgboost.jpg">Machine learning prediction model designed using python, scikit-learn, and xgboost library</a></li>
@@ -52,7 +52,7 @@
             <li class="list"><a href="https://colab.research.google.com/drive/1q18Kfjh81hRrIB9yRmFvLxCzbbke6DyK?usp=sharing" target="_blank">Computer Vision Prediction Model Using TensorFlow, PyTorch, Scikit-Learn</a></li>
             <p class=" mar" style="margin-top: -30px;"><b>Project Overview:</b></p>
             <li class="list">Developed a computer vision prediction model to recognize handwritten digits using the MNIST dataset.</li>
-            <li class="list" style="margin-top: -0px;">Implemented the model using TensorFlow, PyTorch, and Scikit-Learn libraries.</li>
+            <li class="list" style="margin-top: 0px;">Implemented the model using TensorFlow, PyTorch, and Scikit-Learn libraries.</li>
             <p class=" mar" style="margin-top: -30px;"><b>Skills Acquired:</b></p>
             <li class="list">Data Preprocessing: Loaded and prepared the MNIST dataset, including normalization and reshaping of images. Split the dataset into training and testing sets for model evaluation.</li>
             <li class="list" style="margin-top: 0px;">Feature Engineering: Defined features and target variables, and split the dataset into training and testing sets.</li>
@@ -64,7 +64,25 @@
             <li class="list" style="margin-top: 0px;">Model Architecture: Learned about CNNs and their application in image recognition tasks. Understood the importance of layers, activation functions, and pooling in CNNs.</li>
             <li class="list" style="margin-top: 0px;">Performance Optimization: Fine-tuned hyperparameters such as learning rate, batch size, and number of epochs to improve model accuracy.</li>
             <li class="list" style="margin-top: 0px;">Evaluation Techniques: Mastered various evaluation metrics and techniques to assess model performance and identify areas for improvement.</li>
-            <li class="list" style="margin-top: 0px;">Best Practices in Machine Learning: Emphasized the importance of data preprocessing, model validation, and cross-framework integration. Adopted best practices for code organization, documentation, and version control.</li>
+            <li class="list" style="margin-top: 0px;">Best Practices in Machine Learning: Emphasized the importance of data preprocessing, model validation, and cross-framework integration.</li>
+        </ul>
+
+        <ul>
+            <p class="mar" style="margin-top: -30px;">Data Science Advanced</p>
+            <li class="list"><a href="https://colab.research.google.com/drive/1MrO8nsGraCGaDv_3V3D1UksUeNHsLbXg?usp=sharing" target="_blank">Data Science Course: Self Study (Advanced)</a></li>
+            <p class=" mar" style="margin-top: -30px;"><b>Course Overview:</b></p>
+            <li class="list"style="margin: top -45px;">The course covered data science essentials, Python programming, key libraries (NumPy, Pandas, Matplotlib), data analysis functions, data preparation techniques.</li>
+            <li class="list" style="margin-top: 0px;">Mathematical foundations, statistical concepts, correlation and correlation matrix analysis, linear regression, and regression table interpretation. It provided comprehensive knowledge and skills for aspiring data scientists</li>
+            <p class=" mar" style="margin-top: -30px;"><b>Skills Acquired:</b></p>
+            <li class="list">Python Programming: Proficiency in Python and key libraries like NumPy, Pandas, and Matplotlib.</li>
+            <li class="list" style="margin-top: 0px;">Data Analysis: Mastery of data manipulation, analysis functions, and methods.</li>
+            <li class="list" style="margin-top: 0px;">Data Preparation: Techniques for data cleaning, transformation, handling missing data, and dealing with outliers.</li>
+            <li class="list" style="margin-top: 0px;"">Mathetics for Data Science: Solid understanding of linear algebra, calculus, and other mathematical concepts.</li>
+            <li class="list" style="margin-top: 0px;">Statistical Analysis: Knowledge of both descriptive and inferential statistics.</li>
+            <li class="list" style="margin-top: 0px;">Correlation Analysis: Ability to calculate and interpret correlation coefficients.</li>
+            <li class="list" style="margin-top: 0px;">Correlation Matrix: Skills in creating and visualizing correlation matrices to identify relationships between multiple variables.</li>
+            <li class="list" style="margin-top: 0px;">Linear Regression: Expertise in building, evaluating, and interpreting linear regression models.</li>
+            <li class="list" style="margin-top: 0px;">Regression Tables: Proficiency in summarizing regression results and insights from regression tables.</li>
         </ul>
         <pre style="margin-left: 360px; margin-top: 30px; width: 50px;">
             <hr>
