Update all htmls

--- a/Education.html
+++ b/Education.html
@@ -9,7 +9,7 @@
 <body>
     <div class="heading">
         <h1 class="heading_1" style="font-size: xx-large;"> Francis Owoicho Idoko</h1> 
-        <h4 class="heading_2">AI and Machine Learning | Python, PyTorch, TensorFlow, Scikit-Learn</h4>
+        <h4 class="heading_2">Data Analyst | AI and Machine Learning | Python, PyTorch, TensorFlow, Scikit-Learn</h4>
     </div>
    <section class="section">
         <div>
@@ -29,22 +29,17 @@
     <article>  
         <h2 class="art" style="margin-bottom: -70px;text-decoration-line: underline;">Educational History</h2>
         <ul>
-            <p class="art"><a href="https://www.thi.de/en/engineering-and-management/degree-programmes/design-leadership-msc/">MSc Design Leadership, Technische Hochscule Ingolstadt. Mar. 2025</a></p>
-            <li class="list" style="line-height: 20px;"> The Master Design Leadership is about how to use the mindset, tools, techniques, and methods of design and designers to shape the future. Mega trends such as climate change, sustainable mobility, and clean energy are continuously challenging our life as a specie, this course provides the necesasry training to tackle these challenges and restore balance to the ecosystem. </li>
+            <p class="art"><a href="https://www.thi.de/en/engineering-and-management/degree-programmes/design-leadership-msc/">BSc Digital Technology and Managament. 2024 - Present</a></p>
+            <li class="list" style="line-height: 20px;">The Digital Technology and Management programme offers a blend of interdisciplinary and practical education in ICT, operational processes, and management. With international exposure and industry collaboration, the curriculum spans mathematics, digital technology, management, integrative modules, language, and soft skills. Graduates are well-prepared for diverse roles in various industries.</li>
         </ul>
         <ul>
-            <li class="list" style="margin-top: -10px;"> The core modules focus on Corporate Social Responsibility and Leadership, Innovation Managament, Project Managament, Business Managament, and Intercutural Communication</li>
+            <li class="list" style="margin-top: -10px;"> The core modules include <b></b>Mathematics, Algorithms and Data Structures, Object-oriented Coding, Statistics and Quantitative Methods, Information Systems and Databases, Evidence-based Methods (EBM), IoT Technology, Sensors for Smart Systems, Communication Technology, Production Technology, Innovation and Technology Lifecycle Management.</li>
         </ul>
         <ul>
-            <p class="art" style="margin-top: -30px;"><a href="https://www.nithh.org/your-mba-in-technology-management">MBA Technology Management, Northern Institute of Technology Management Hamburg. Feb. 2022</a></p>
-            <li class="list" style="line-height: 20px;"> The executive MBA program is an interdisciplinary masters that combines Technology Management and Business Innovation. The aim is to prepare individuals to take on challenging leadership positions and steer organizations in the direction of sustainable growth. It encompasses students from countries all over the world, thus adding flavour of diversity to the mix and providing an enriched experience for all. The learning style involves team projects, case studies, and presentation.</li>
-        </ul>
-        <ul>
-            <li class="list" style="margin-top: -10px;"> The core modules focus on Accounting, Finance, Supply Chain Managament, Technology Roadmapping and Strategy, Business Model Innovation, and Communication.</li>
-        </ul>
-        <ul>
-            <p class="art" style="margin-top: -30px;"><a href="https://atbu.edu.ng/">BSc Electrical and ELectronics Engineering, Abubakar Tafawa Balewa University Bauchi. Nov. 2012</a></p>
-            <li class="list" style="line-height: 20px;"> This study prepares students to deal with challenging technical problems in the field of electricity, electronics, and power systems.</li>
+            <p class="art" style="margin-top: -30px;"><a href="https://atbu.edu.ng/">BSc Electrical and ELectronics Engineering, Abubakar Tafawa Balewa University Bauchi. 2012</a></p>
+            <li class="list" style="line-height: 20px;">This study programme equips students with the skills and knowledge needed to tackle complex technical challenges in electricity, electronics, and power systems. By combining theoretical foundations with hands-on experience, students learn to design, analyze, and optimize electrical systems, manage electronic devices, and ensure the efficient operation of power systems. The curriculum covers cutting-edge technologies, innovative methodologies, and interdisciplinary approaches, preparing graduates for diverse roles in industries such as renewable energy, telecommunications, automation, and smart grid management. Additionally, students develop problem-solving abilities, critical thinking, and practical expertise, making them valuable assets in the ever-evolving field of electrical engineering.
+
+            </li>
         </ul>
         <ul>
             <li class="list" style="margin-top: -10px;"> The core modules include Engineering Mathematics, Power Electronics, Telecommunications, Semiconductor Technology, Programming, Microcontrollers and Microprocessors, and Management.</li>
