--- a/Research Work.html
+++ b/Research Work.html
@@ -9,7 +9,7 @@
 <body>
     <div class="heading">
         <h1 class="heading_1" style="font-size: xx-large;"> Francis Owoicho Idoko</h1> 
-        <h4 class="heading_2">AI and Machine Learning | Python, PyTorch, TensorFlow, Scikit-Learn</h4>
+        <h4 class="heading_2">Data Analyst | AI and Machine Learning | Python, PyTorch, TensorFlow, Scikit-Learn</h4>
     </div>
    <section class="section">
         <div>
@@ -30,7 +30,7 @@
         <h2 class="art" style="margin-bottom: -70px;text-decoration-line: underline;">Academic and Individual Research</h2>
         <ul>
             <p class="art">Methodology for Utilzing Artificial Intelligence Model in The Empathize Stage of Design Thinking</p>
-            <li class="list" style="text-align: justify;margin-right: 40px; line-height: 25px;"">Abstract: This master thesis aims to design a methodology for utilizing artificial intelligence (AI) models in the empathize stage of the design thinking (DT) process. This stage relies heavily on user research, which is time-intensive and subject to biases such
+            <li class="list" style="text-align: justify;margin-right: 40px; line-height: 25px;"">Abstract: This reseaerch aims to design a methodology for utilizing artificial intelligence (AI) models in the empathize stage of the design thinking (DT) process. This stage relies heavily on user research, which is time-intensive and subject to biases such
                 as personal opinions and stereotypes. AI models can analyze large datasets and identify patterns more quickly than humans. However, utilizing AI models in this stage presents challenges, including the selection of appropriate AI models, data
                 types, model biases, hallucination, and ethical considerations. The study employed qualitative research based on expert interviews to gather insights from industry professionals on the potential and limitations of AI in design thinking. The insights
                 from the gathered data and reviewed literature were instrumental in developing a methodology that incorporates AI in the empathize stage, visualized using a swimlane flowchart. Additionally, a software-as-a-service (SaaS) platform prototype,
