--- a/Contacts.html
+++ b/Contacts.html
@@ -44,6 +44,14 @@
             <p class="art" style="margin-top: -30px;">LinkedIn:</p>
             <li class="list"><a href="https://www.linkedin.com/in/francis-idoko/" > https://www.linkedin.com/in/francis-idoko/</a></li>
         </ul>
+
+        <pre style="margin-left: 360px; margin-top: 300px; width: 50px;">
+            <hr>
+        </pre>
+        
+        <pre style="margin-left: 360px; margin-top: 30px;">
+            <p>&copy; 2025 Francis Owoicho Idoko. All rights reserved</p>
+        </pre>
     </article>
 </body>
 </html>
