--- a/Projects.html
+++ b/Projects.html
@@ -72,7 +72,7 @@
             <li class="list"><a href="https://colab.research.google.com/drive/1MrO8nsGraCGaDv_3V3D1UksUeNHsLbXg?usp=sharing" target="_blank">Data Science Course: Self Study (Advanced)</a></li>
             <p class=" mar" style="margin-top: -30px;"><b>Course Overview:</b></p>
             <li class="list"style="margin: top -45px;">The course covered data science essentials, Python programming, key libraries (NumPy, Pandas, Matplotlib), data analysis functions, data preparation techniques.</li>
-            <li class="list" style="margin-top: 0px;">Mathematical foundations, statistical concepts, correlation and correlation matrix analysis, linear regression, and regression table interpretation. It provided comprehensive knowledge and skills for aspiring data scientists</li>
+            <li class="list" style="margin-top: 0px;">Mathematical foundations, statistical concepts, correlation and correlation matrix analysis, linear regression, and regression table interpretation.</li>
             <p class=" mar" style="margin-top: -30px;"><b>Skills Acquired:</b></p>
             <li class="list">Python Programming: Proficiency in Python and key libraries like NumPy, Pandas, and Matplotlib.</li>
             <li class="list" style="margin-top: 0px;">Data Analysis: Mastery of data manipulation, analysis functions, and methods.</li>
@@ -84,7 +84,7 @@
             <li class="list" style="margin-top: 0px;">Linear Regression: Expertise in building, evaluating, and interpreting linear regression models.</li>
             <li class="list" style="margin-top: 0px;">Regression Tables: Proficiency in summarizing regression results and insights from regression tables.</li>
         </ul>
-        <pre style="margin-left: 360px; margin-top: 30px; width: 50px;">
+        <pre style="margin-left: 360px; margin-top: 300px; width: 50px;">
             <hr>
         </pre>
         <pre style="margin-left: 360px; margin-top: 30px;">
