--- a/Research Work.html
+++ b/Research Work.html
@@ -45,6 +45,14 @@
             <li class="list" style="margin-top: -10px;"><a href="sentiment_analysis.jpg" target="_parent">Figure 1: Sentiment Analysis Model.</a></li>
             <img src="sentiment_analysis.jpg" alt="sentiment analysis image" style="margin-left: 60px; margin-top: 30px;">
         </ul>
+
+        <pre style="margin-left: 360px; margin-top: 300px; width: 50px;">
+            <hr>
+        </pre>
+        
+        <pre style="margin-left: 360px; margin-top: 30px;">
+            <p>&copy; 2025 Francis Owoicho Idoko. All rights reserved</p>
+        </pre>
     </article>
 </body>
 </html>
