--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         <p class="art">Francis speaks English fluently, can hold a decent conversation in German, and is currently learning Spanish and French.</p>
         <p class="art">Favourite Quote:</p>
         <p class="art" style="margin-top: -70px;"><i><q>Challenges are what make life interesting, and overcoming<br> them is what makes life meaningful.</q> – Joshua J. Marine</i></p>
+
+        <pre style="margin-left: 360px; margin-top: 300px; width: 50px;">
+            <hr>
+        </pre>
+        
+        <pre style="margin-left: 360px; margin-top: 30px;">
+            <p>&copy; 2025 Francis Owoicho Idoko. All rights reserved</p>
+        </pre>
     </article>
 </body>
 </html>
