--- a/Education.html
+++ b/Education.html
@@ -44,6 +44,14 @@
         <ul>
             <li class="list" style="margin-top: -10px;"> The core modules include Engineering Mathematics, Power Electronics, Telecommunications, Semiconductor Technology, Programming, Microcontrollers and Microprocessors, and Management.</li>
         </ul>
+
+        <pre style="margin-left: 360px; margin-top: 300px; width: 50px;">
+            <hr>
+        </pre>
+        
+        <pre style="margin-left: 360px; margin-top: 30px;">
+            <p>&copy; 2025 Francis Owoicho Idoko. All rights reserved</p>
+        </pre>
     </article>
 </body>
 </html>
