--- a/Projects.html
+++ b/Projects.html
@@ -27,7 +27,7 @@
     </section>
      
     <article>  
-        <h2 class="art" style="margin-top: 0px;text-decoration-line: underline;">Summary of Projects and Personal Learnings</h2>
+        <h2 class="art" style="text-decoration-line: underline;">Summary of Projects and Personal Learnings</h2>
         <ul>
             <p class="art">Machine Learning Projects</p>
             <li class="list"><a href="predictionmodel_xgboost.jpg">Machine learning prediction model designed using python, scikit-learn, and xgboost library</a></li>
