--- a/Education.html
+++ b/Education.html
@@ -27,7 +27,7 @@
     </section>
      
     <article>  
-        <h2 class="art" style="margin-bottom: -70px;text-decoration-line: underline;">Educational History</h2>
+        <h2 class="art" style="text-decoration-line: underline;">Educational History</h2>
         <ul>
             <p class="art"><a href="https://www.oth-aw.de/en/studies/study-offers/study-programmes/bachelor/digital-technology-management/structure/">BSc Digital Technology and Managament. 2024 - Present</a></p>
             <li class="list" style="line-height: 20px;">The Digital Technology and Management programme offers a blend of interdisciplinary and practical education in ICT, operational processes, and management. With international exposure and industry collaboration, the curriculum spans mathematics, digital technology, management, integrative modules, language, and soft skills. Graduates are well-prepared for diverse roles in various industries.</li>
