--- a/Research Work.html
+++ b/Research Work.html
@@ -27,7 +27,7 @@
     </section>
      
     <article>  
-        <h2 class="art" style="margin-bottom: -70px;text-decoration-line: underline;">Academic and Individual Research</h2>
+        <h2 class="art" style="text-decoration-line: underline;">Academic and Individual Research</h2>
         <ul>
             <p class="art">Methodology for Utilzing Artificial Intelligence Model in The Empathize Stage of Design Thinking</p>
             <li class="list" style="text-align: justify;margin-right: 40px; line-height: 25px;"">Abstract: This reseaerch aims to design a methodology for utilizing artificial intelligence (AI) models in the empathize stage of the design thinking (DT) process. This stage relies heavily on user research, which is time-intensive and subject to biases such
