--- a/Education.html
+++ b/Education.html
@@ -26,14 +26,28 @@
         </div>
     </section>
      
-    <article>  
+    <article style="margin-right: 40px;">  
         <h2 class="art" style="text-decoration-line: underline;">Educational History</h2>
         <ul>
             <p class="art"><a href="https://www.oth-aw.de/en/studies/study-offers/study-programmes/bachelor/digital-technology-management/structure/">BSc Digital Technology and Managament. 2024 - Present</a></p>
             <li class="list" style="line-height: 20px;">The Digital Technology and Management programme offers a blend of interdisciplinary and practical education in ICT, operational processes, and management. With international exposure and industry collaboration, the curriculum spans mathematics, digital technology, management, integrative modules, language, and soft skills. Graduates are well-prepared for diverse roles in various industries.</li>
         </ul>
         <ul>
-            <li class="list" style="margin-top: -10px;"> The core modules include <b></b>Mathematics, Algorithms and Data Structures, Object-oriented Coding, Statistics and Quantitative Methods, Information Systems and Databases, Evidence-based Methods (EBM), IoT Technology, Sensors for Smart Systems, Communication Technology, Production Technology, Innovation and Technology Lifecycle Management.</li>
+            <li class="list" style="margin-top: -15px;"> The core modules include <b></b>Mathematics, Algorithms and Data Structures, Object-oriented Coding, Statistics and Quantitative Methods, Information Systems and Databases, Evidence-based Methods (EBM), IoT Technology, Sensors for Smart Systems, Communication Technology, Production Technology, Innovation and Technology Lifecycle Management.</li>
+        </ul>
+        <ul>
+            <p class="art" style="margin-top: -30px;"><a href="#">Diploma in Machine Learning, Outcast Academy. 2025 - Present</a></p>
+            <li class="list" style="line-height: 20px;">The Machine Learning Bootcamp equips learners with a comprehensive understanding and practical skills in data science and machine learning. Emphasizing hands-on experience and real-world applications, the curriculum covers data analysis, machine learning model development, and neural network design and training.</li>
+        </ul>
+        <ul>
+            <li class="list" style="margin-top: -15px;"> The core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model Development (TensorFlow, Keras), Neural Networks and Deep Learning.</li>
+        </ul>
+        <ul>
+            <p class="art" style="margin-top: -30px;"><a href="https://atbu.edu.ng/">Data Science Certification. W3 School. 2.2021 - 7.2021</a></p>
+            <li class="list" style="line-height: 20px;">The training course equips learners with a comprehensive understanding and practical skills in data science. Emphasizing hands-on experience and real-world applications, the curriculum covers data analysis, machine learning, and statistical methods. Graduates are well-prepared for various roles in technology and data-driven industries.</li>
+        </ul>
+        <ul>
+            <li class="list" style="margin-top: -15px;"> This core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model and Algorithms, Statistical Methods and Predictive Analysis.</li>
         </ul>
         <ul>
             <p class="art" style="margin-top: -30px;"><a href="https://atbu.edu.ng/">BSc Electrical and ELectronics Engineering, Abubakar Tafawa Balewa University Bauchi. 2012</a></p>
@@ -42,7 +56,7 @@
             </li>
         </ul>
         <ul>
-            <li class="list" style="margin-top: -10px;"> The core modules include Engineering Mathematics, Power Electronics, Telecommunications, Semiconductor Technology, Programming, Microcontrollers and Microprocessors, and Management.</li>
+            <li class="list" style="margin-top: -15px;"> The core modules include Engineering Mathematics, Power Electronics, Telecommunications, Semiconductor Technology, Programming, Microcontrollers and Microprocessors, and Management.</li>
         </ul>
 
         <pre style="margin-left: 360px; margin-top: 300px; width: 50px;">
