--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Personal Portflio</title>
     <link rel="stylesheet" href="mystyle.css">
 </head>
-<body>
+<body class="container">
     <div class="heading">
         <h1 class="heading_1" style="font-size: xx-large;"> Francis Owoicho Idoko</h1> 
         <h4 class="heading_2">Data Analyst | AI and Machine Learning | Python, PyTorch, TensorFlow, Scikit-Learn</h4>
@@ -33,16 +33,17 @@
         <p class="art" >He enjoys playing football on the weekends and is a fan of FC Barcelona. When he is not traveling across Europe, you can find him spending quality time with his close friends. He also enjoys reading novels, with Robert Ludlum and Sebastian Fitzek being his favorite authors. As a deep thinker who delves into the realms of philosophy and consciousness, you may sometimes catch him listening to the teachings of Friedrich Nietzsche, Carl Jung, and the works of ancient Stoics like Epictetus, Seneca, and Zeno. He is friendly and loves pets.</p>
         <p class="art">As someone who believes in the power of community and networking, he is a staunch member of the Nigerian Scholars in Germany (NiSIG e.V.) — an association for all scholarly individuals of Nigerian descent residing in Germany. It has its headquarters in Berlin and operates in all 16 Federal States of the Federal Republic of Germany.</p>
         <p class="art">Francis speaks English fluently, can hold a decent conversation in German, and is currently learning Spanish and French.</p>
-        <p class="art">Favourite Quote:</p>
-        <div class="quote" style="margin-top: -50px;"><i><bl><q>Challenges are what make life interesting, and overcoming<br> them is what makes life meaningful.</q> – Joshua J. Marine</i></div>
-
-        <pre style="margin-left: 360px; margin-top: 300px; width: 50px;">
+        <p class="art">Favourite Quote:
+        <p class="art" style="color: rgba(0, 0, 0, 0.614);">Challenges are what make life interesting, and overcoming<br> them is what makes life meaningful.</q> – Joshua J. Marine</p>
+    </article>
+    <Footer class="Footer">
+        <pre style="margin-left: 32px; margin-top: -30px; width: 50px;">
             <hr>
         </pre>
         
-        <pre style="margin-left: 360px; margin-top: 30px;">
+        <pre style="margin-left: 32px; margin-top: 30px;">
             <p>&copy; 2025 Francis Owoicho Idoko. All rights reserved</p>
         </pre>
-    </article>
+    </Footer>
 </body>
 </html>
