--- a/Education.html
+++ b/Education.html
@@ -30,7 +30,7 @@
     
             <section style="margin-top: 30px;">
                 <p"><a href="https://www.w3schools.com/">Data Science Certification. W3 School. 2.2021 - 7.2021</a></p>
-                <p">This core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model and Algorithms, Statistical Methods and Predictive Analysis.</p>
+                <p">A Data Science Certification course equips you with essential skills in data analysis, machine learning, and statistical modeling. You'll learn to use tools like Python, SQL, and R, and gain hands-on experience with real-world projects. The course covers data visualization, predictive modeling, and data mining, preparing you for a career in data science. No prior experience is required, making it accessible to beginners.</p>
                 <p">The core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model and Algorithms, Statistical Methods and Predictive Analysis.</p>
             </section>
 
