--- a/Project.html
+++ b/Project.html
@@ -14,11 +14,11 @@
             <img src="image.jpg" alt="my image" style="display: block;">
             <div><a href="index.html">Home</a><br><a href="Education.html">Education</a><br><a href="Project.html">Project</a><br><a href="Contact.html">Contact</a></div>
         </div>
-        <div class="content"><h2>Project</h2>
+        <div class="content"><h2>Project and Self-Learning</h2>
 
             <section>
                 <div style="width: 80%;"><hr></div>
-                <p>Machine Learning Projects</p>
+                <p>Machine Learning Project</p>
                 <p><a href="predictionmodel_xgboost.jpg">Machine learning prediction model designed using python, scikit-learn, and xgboost library</a></p>
                 <p>The model aimed to predict precipitation values (PRCP) based on weather data.</p>
                 <p><b>Skills Acquired:</b></p>
@@ -58,7 +58,7 @@
             <section style="margin-top: 30px;">
                 <div style="width: 80%;"><hr></div>
                 <p>Data Science Advanced</p>
-                <p><a href="https://colab.research.google.com/drive/1MrO8nsGraCGaDv_3V3D1UksUeNHsLbXg?usp=sharing" target="_blank">Data Science Course: Self Study (Advanced)</a></p>
+                <p><a href="https://colab.research.google.com/drive/1MrO8nsGraCGaDv_3V3D1UksUeNHsLbXg?usp=sharing" target="_blank">Data Science Crash Course</a></p>
                 <p ><b>Course Overview:</b></p>
                 <li>The course covered data science essentials, Python programming, key libraries (NumPy, Pandas, Matplotlib), data analysis functions, data preparation techniques.</li>
                 <li>Mathematical foundations, statistical concepts, correlation and correlation matrix analysis, linear regression, and regression table interpretation.</li>
