--- a/Education.html
+++ b/Education.html
@@ -9,10 +9,10 @@
 <body>
 
     <div class="container">
-        <div class="big" style="text-align: center;"><h1>Francis Owoicho Idoko</h1></div>
+        <div class="big" style="text-align: center;"><img src="banner.jpg" alt="Banner" class="banner-image"><h1>Francis Owoicho Idoko</h1></div>
         <div class="menu">
             <img src="image.jpg" alt="my image" style="display: block;">
-            <div><a href="index.html">Home</a><br><a href="Education.html">Education</a><br><a href="Project.html">Project</a><br><a href="Contact.html">Contact</a></div>
+            <div><a href="index.html">Home</a><br><a href="Education.html"><b style="color: rgb(126, 230, 230);">Education</b></a><br><a href="Project.html">Project</a><br><a href="Contact.html">Contact</a></div>
         </div>
         <div class="content"><h2>Education</h2>
             <div style="width: 80%;"><hr></div>
