--- a/Contact.html
+++ b/Contact.html
@@ -17,19 +17,19 @@
         <div class="content"><h2>Contacts</h2>
             <div style="width: 80%;"><hr></div>
            <section style="margin-top: 30px;">
-            <p"><b>Home Address:</b></p>
+            <p"><b style="font-weight: lighter;">Home Address:</b></p>
             <p">Haunwöhrer  Straße 99</p>
             <p">85051, Ingolstadt</p>
             <p">Bayern, Germany</p>
            </section> 
            <div style="width: 80%;"><hr></div>
            <section style="margin-top: 30px;">
-            <p"><b>Phone:</b></p>
+            <p"><b style="font-weight: lighter;">Phone:</b></p>
             <p">+4915738220234</p>
            </section>
            <div style="width: 80%;"><hr></div>
            <section style="margin-top: 30px;">
-            <p"><b>Email:</b></p>
+            <p"><b style="font-weight: lighter;">Email:</b></p>
             <p">francisowoichoidoko@gmail.com</p>
            </section>
 
