--- a/Project.html
+++ b/Project.html
@@ -21,13 +21,13 @@
                 <p>Machine Learning Project</p>
                 <p><a href="predictionmodel_xgboost.jpg">Machine learning prediction model designed using python, scikit-learn, and xgboost library</a></p>
                 <p>The model aimed to predict precipitation values (PRCP) based on weather data.</p>
-                <p><b>Skills Acquired:</b></p>
+                <p><b style="font-weight: lighter;">Skills Acquired:</b></p>
                 <li>Data Preprocessing: Handled missing and erroneous data, converted categorical data to numerical codes, and inferred object types.</li>
                 <li>Feature Engineering: Defined features and target variables, and split the dataset into training and testing sets.</li>
                 <li>Model Evaluation: Evaluated the model's performance using Mean Squared Error (MSE), Root Mean Squared Error (RMSE), and Mean Absolute Error (MAE).</li>
                 <li>Version Control: Utilized Git commands (git add, git commit, git push, git pull) to manage the repository and collaborated with others.</li>
                 <lo>GitHub Pages: Hosted and rendered HTML files to display the project as a website.</li>
-                <p><b>Learning Outcomes:</b></p>
+                <p><b style="font-weight: lighter;">Learning Outcomes:</b></p>
                 <li>Gained hands-on experience with machine learning workflows and data preprocessing techniques.</li>
                 <li>Improved skills in model training, evaluation, and hyperparameter tuning using XGBoost.</li>
                 <li>Enhanced understanding of version control and collaboration using Git and GitHub.</li>
@@ -38,16 +38,16 @@
                 <div style="width: 80%;"><hr></div>
                 <p>Computer Vision Prediction Model Using TensorFlow, PyTorch, Scikit-Learn</p>
                 <p><a href="https://colab.research.google.com/drive/1q18Kfjh81hRrIB9yRmFvLxCzbbke6DyK?usp=sharing" target="_blank">Computer Vision Prediction Model Using TensorFlow, PyTorch, Scikit-Learn</a></p>
-                <p><b>Project Overview:</b></p>
+                <p><b style="font-weight: lighter;">Project Overview:</b></p>
                 <li>Developed a computer vision prediction model to recognize handwritten digits using the MNIST dataset.
                 <li>Implemented the model using TensorFlow, PyTorch, and Scikit-Learn libraries.</p>
-                <p><b>Skills Acquired:</b></p>
+                <p><b style="font-weight: lighter;">Skills Acquired:</b></p>
                 <li>Data Preprocessing: Loaded and prepared the MNIST dataset, including normalization and reshaping of images. Split the dataset into training and testing sets for model evaluation.</li>
                 <li>Feature Engineering: Defined features and target variables, and split the dataset into training and testing sets.</li>
                 <li>Model Development: Created and trained convolutional neural networks (CNNs) using TensorFlow and PyTorch. Fine-tuned hyperparameters to optimize model performance.</li>
                 <li>Evaluation and Metrics: Evaluated model performance using accuracy, precision, recall, and F1-score. Used confusion matrices to visualize prediction results and identify misclassifications.</li>
                 <li>Integration and Comparison: Integrated Scikit-Learn for additional preprocessing and evaluation. Compared the performance of models built with TensorFlow and PyTorch.</li>
-                <p><b>Key Learnings:</b></p>
+                <p><b style="font-weight: lighter;">Key Learnings:</b></p>
                 <li>Deep Learning Frameworks: Gained hands-on experience with TensorFlow and PyTorch, understanding their differences and use cases.</li>
                 <li>Model Architecture: Learned about CNNs and their application in image recognition tasks. Understood the importance of layers, activation functions, and pooling in CNNs.</li>
                 <li>Performance Optimization: Fine-tuned hyperparameters such as learning rate, batch size, and number of epochs to improve model accuracy.</li>
@@ -59,10 +59,10 @@
                 <div style="width: 80%;"><hr></div>
                 <p>Data Science Advanced</p>
                 <p><a href="https://colab.research.google.com/drive/1MrO8nsGraCGaDv_3V3D1UksUeNHsLbXg?usp=sharing" target="_blank">Data Science Crash Course</a></p>
-                <p ><b>Course Overview:</b></p>
+                <p ><b style="font-weight: lighter;">Course Overview:</b></p>
                 <li>The course covered data science essentials, Python programming, key libraries (NumPy, Pandas, Matplotlib), data analysis functions, data preparation techniques.</li>
                 <li>Mathematical foundations, statistical concepts, correlation and correlation matrix analysis, linear regression, and regression table interpretation.</li>
-                <p><b>Skills Acquired:</b></p>
+                <p><b style="font-weight: lighter;">Skills Acquired:</b></p>
                 <li>Python Programming: Proficiency in Python and key libraries like NumPy, Pandas, and Matplotlib.</li>
                 <li>Data Analysis: Mastery of data manipulation, analysis functions, and methods.</li>
                 <li>Data Preparation: Techniques for data cleaning, transformation, handling missing data, and dealing with outliers.</li>
